--- a/plantseg/resources/training_configs/root/nuclei/config_train.yml
+++ b/plantseg/resources/training_configs/root/nuclei/config_train.yml
@@ -63,7 +63,7 @@ loaders:
 
     # SliceBuilder configuration, i.e. how to iterate over the input volume patch-by-patch
     slice_builder:
-      name: FliterSliceBuilder
+      name: FilterSliceBuilder
       # train patch size given to the network (adapt to fit in your GPU mem, generally the bigger patch the better)
       patch_shape: [80, 170, 170]
       # train stride between patches
