--- a/plantseg/resources/training_configs/root/nuclei/config_train2d.yml
+++ b/plantseg/resources/training_configs/root/nuclei/config_train2d.yml
@@ -43,9 +43,9 @@ trainer:
   # how many iterations between tensorboard logging
   log_after_iters: 250
   # max number of epochs
-  epochs: 300
+  max_num_epochs: 400
   # max number of iterations
-  iters: 60000
+  max_num_iterations: 80000
 loaders:
   batch_size: 16
   # how many subprocesses to use for data loading
@@ -67,9 +67,9 @@ loaders:
       # train patch size given to the network (adapt to fit in your GPU mem, generally the bigger patch the better)
       patch_shape: [1, 170, 170]
       # train stride between patches
-      stride_shape: [1, 40, 40]
+      stride_shape: [1, 80, 80]
       # minimum volume of the labels in the patch
-      threshold: 0.01
+      threshold: 0.1
       # probability of accepting patches which do not fulfil the threshold criterion
       slack_acceptance: 0.01
 
@@ -117,7 +117,7 @@ loaders:
       # train stride between patches
       stride_shape: [1, 170, 170]
       # minimum volume of the labels in the patch
-      threshold: 0.01
+      threshold: 0.1
       # probability of accepting patches which do not fulfil the threshold criterion
       slack_acceptance: 0.01
 
